--- a/src/080-configuring-typescript/180.4-verbatim-module-syntax-enforces-proper-import-syntax.problem/tsconfig.json
+++ b/src/080-configuring-typescript/180.4-verbatim-module-syntax-enforces-proper-import-syntax.problem/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "NodeNext",
-    "esModuleInterop": true,
+    "esModuleInterop": false,
     "strict": true,
     "skipLibCheck": true,
     "isolatedModules": true,
