--- a/src/080-configuring-typescript/183-multiple-tsconfig-json-files.problem/package.json
+++ b/src/080-configuring-typescript/183-multiple-tsconfig-json-files.problem/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsc --watch"
+    "dev-server": "cd src/server && tsc --watch",
+    "dev-client": "cd src/client && tsc --watch"
   }
 }
