--- a/src/080-configuring-typescript/183-multiple-tsconfig-json-files.problem/src/server/tsconfig.json
+++ b/src/080-configuring-typescript/183-multiple-tsconfig-json-files.problem/src/server/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
+    "target": "ESNext",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "esModuleInterop": true,
-    "outDir": "dist",
-    "rootDir": "src",
+    "noEmit": true,
     "strict": true,
     "skipLibCheck": true,
     "isolatedModules": true,
-    "moduleDetection": "force",
-    "jsx": "react-jsx"
+    "lib": [
+      "ESNext"
+    ],
   },
 }
